# dyn-clone

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: readme.rs
src/: lib.rs  macros.rs
tests/: macros.rs  trait.rs
tests/ui/: missing-supertrait.stderr
