[package]
name = "dyn-clone"
version = "1.0.8" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
rust-version = "1.45"
license = "MIT OR Apache-2.0"
description = "Clone trait that is object-safe"
repository = "https://github.com/dtolnay/dyn-clone"
documentation = "https://docs.rs/dyn-clone"
readme = "README.md"

[dev-dependencies]
rustversion = "1.0"
trybuild = { version = "1.0.49", features = ["diff"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
