[package]
name = "dyn-clone"
version = "1.0.17"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["rust-patterns", "no-std"]
description = "Clone trait that is object-safe"
documentation = "https://docs.rs/dyn-clone"
edition = "2018"
keywords = ["dyn", "clone", "trait-object"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/dyn-clone"
rust-version = "1.45"

[dev-dependencies]
rustversion = "1.0"
trybuild = { version = "1.0.66", features = ["diff"] }

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
