[package]
name = "dyn-clone"
version = "1.0.20"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["rust-patterns", "no-std"]
description = "Clone trait that is dyn-compatible"
documentation = "https://docs.rs/dyn-clone"
edition = "2018"
keywords = ["dyn", "clone", "trait-object", "object-safe"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/dyn-clone"
rust-version = "1.60"

[dev-dependencies]
rustversion = "1.0"
trybuild = { version = "1.0.66", features = ["diff"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]
